# gmockautogen

./: CMakeLists.txt  LICENSE  README.md
src/: ast_consumer.h  ast_visitor.h  frontend_action.h  main.cpp
